# etalk

./: .gitignore  AUTHORS  Makefile.am  aclocal.m4  autogen.sh  config.h.in  configure  configure.in
src/: Makefile.am  et_account.vala  et_account_manager.vala  et_channel.vala  et_clients.vala  et_connection.vala  et_contact.vala  et_contact_manager.vala  et_session_manager.vala  fso.vala  gui.vala  gui_list_account.vala  gui_list_session.vala  gui_main.vala  gui_new_account.vala  gui_session.vala  gui_settings_account.vala  gui_settings_main.vala  main.vala  shared.vala  telepathy_gdbus_aux.vala  telepathy_gdbus_interfaces.vala
telepathy/: org-freedesktop-telepathy-authentication.vala  org-freedesktop-telepathy-call-content-codecoffer.vala  org-freedesktop-telepathy-call-content-interface-media.vala  org-freedesktop-telepathy-call-content-interface-mute.vala  org-freedesktop-telepathy-call-content-interface-videocontrol.vala  org-freedesktop-telepathy-call-content.vala  org-freedesktop-telepathy-call-stream-endpoint.vala  org-freedesktop-telepathy-call-stream-interface-media.vala  org-freedesktop-telepathy-call-stream.vala  org-freedesktop-telepathy-channelbundle.vala  org-freedesktop-telepathy-foo.vala  org-freedesktop-telepathy-media.vala  org-freedesktop-telepathy.vala
tests/: Makefile  Makefile.am  Makefile.in  contacts_info.vala  send_msg.vala
vapi/: config.vapi
