SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in

#desktopdir = $(datadir)/applications
#desktop_DATA = data/ETALK.desktop

#pixmapsdir = $(datadir)/pixmaps
#pixmaps_DATA =  data/ETALK.png

#imagesdir = $(datadir)/ETALK/images
#images_DATA = \
#	data/audio-card-offline.png
#EXTRA_DIST = $(images_DATA)
