AC_INIT(etalk, 0.1, pespin.shar@gmail.com)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.in)

AM_INIT_AUTOMAKE(1.11 dist-bzip2)
AM_CONFIG_HEADER(config.h)

AC_C_BIGENDIAN
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST

AM_PROG_VALAC ([0.11.3])

ETALK_PACKAGES="--pkg gio-2.0 --pkg eina --pkg evas --pkg ecore --pkg elementary"

PKG_CHECK_MODULES(ETALK,	glib-2.0 >= 2.26.1
							gobject-2.0
							gio-2.0
							elementary
							eina
							ecore
							evas
							dbus-1)
AC_SUBST(TELEPATHY_CFLAGS)	
AC_SUBST(ETALK_LIBS)
AC_SUBST(ETALK_CFLAGS)
AC_SUBST(ETALK_PACKAGES)


AC_ARG_ENABLE([fso],
   [AC_HELP_STRING([--enable-fso], [enable FSO support])],
   [
    if test "x${enableval}" = "xyes" ; then
       enable_fso="yes"
    else
       enable_fso="no"
    fi
   ],
   [enable_fso="no"])

ETALK_VALAFLAGS="-X \"-DIMAGESDIR=$(datadir)/ETALK/images\" "
ETALK_VALAFLAGS+="--vapidir ../vapi "
ETALK_VALAFLAGS+="--pkg config "



if test "x$enable_fso" = "xyes" ; then
	echo "ADDING FSO SUPPORT FOR THIS BUILD..."
	ETALK_VALAFLAGS+="--define=_FSO_"
fi
AC_SUBST(ETALK_VALAFLAGS)


AC_CONFIG_FILES([
Makefile
src/Makefile
])
AC_OUTPUT
